--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <head>
         <h1>PWA DEMO</h1>
     </head>
+    <div>
+        <div>
+            <img src="./img/p30_1.webp" />
+            <img src="./img/p30_2.webp" />
+            <img src="./img/p30_3.webp" />
+            <img src="./img/p30_4.webp" />
+        </div>
+
+
+
+    </div>
+
+    <script src="index.js"></script>
 
 </body>
 
