--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </head>
     <div>
         <div>
+            <img src="./img/demo_01.png" />
+            <img src="./img/search.svg" />
             <img src="./img/p30_1.webp" />
             <img src="./img/p30_2.webp" />
             <img src="./img/p30_3.webp" />
